--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,7 +29,7 @@
             android:layout_width="64dp"
             android:textColor="@android:color/black"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             android:selectAllOnFocus="true" />
         </com.google.android.material.textfield.TextInputLayout>
         <Button
